# TAR

./: todo.md
practica_1_2526/interfaz_servicio_suma/install/: local_setup.sh  setup.ps1
practica_1_2526/memoria/: memoria.aux  memoria.out  memoria.tex  memoria.toc  portada.tex
practica_1_2526/memoria/parte1/: parte1.tex
practica_1_2526/memoria/parte2/: parte2.tex
practica_1_2526/memoria/parte3/: parte3.tex
practica_1_2526/ros2_ws/log/: latest_build
practica_1_2526/ros2_ws/src/interfaz/: CMakeLists.txt
practica_1_2526/ros2_ws/src/interfaz/action/: EjFibonacci.action
practica_2_2526/: .gitignore  Dockerfile  README.md
practica_2_2526/log/: latest_build
practica_2_2526/mem/: mem_prac2.aux  mem_prac2.out  mem_prac2.tex  mem_prac2.toc  portada.tex
practica_2_2526/ros2_ws/: .gitignore
practica_2_2526/ros2_ws/install/: setup.sh
practica_2_2526/ros2_ws/log/: latest_build
proyecto_toria/: doc.rar
proyecto_toria/doc/: config.tex  main.aux  main.bbl  main.blg  main.out  main.tex  main.toc
proyecto_toria/robot_description/: Dockerfile  README_LINUX.md  docker-compose.yml  start_vnc.sh
proyecto_toria/robot_description/hospital_robot/: CMakeLists.txt  package.xml
proyecto_toria/robot_description/hospital_robot/config/: robot_view.rviz
proyecto_toria/robot_description/hospital_robot/launch/: hospital_sim.launch.py
proyecto_toria/robot_description/hospital_robot/scripts/: patrol.py
proyecto_toria/robot_description/hospital_robot/urdf/: robot_hospitalario.urdf  robot_v2.urdf
proyecto_toria/slides/: main.aux  main.nav  main.out  main.tex  main.toc
(+431 files in other folders)
